--- a/assets/css/sass/_variables.scss
+++ b/assets/css/sass/_variables.scss
@@ -12,7 +12,7 @@ $dark: #505050;
 $dark2: #E0E0E0;
 $white: #fff;
 $white2: #e6e6e6;
-$white3: #fafafa;
+$white3: #F0F0F0;
 $black: #202020;
 $black2: #000;
 $light: #f6f6f8;
