--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -996,19 +996,22 @@ html[lang=ar] .iti--separate-dial-code .iti__flag-container {
     min-width: 132px;
   }
 }
-.main-btn.yellow-transparent {
+.main-btn.red-transparent {
   background-color: transparent;
-  color: #202020;
-  border-color: #0c69ad;
+  color: #d00000;
+  border-color: #d00000;
 }
-.main-btn.yellow-transparent:hover {
-  background-color: #0c69ad;
+.main-btn.red-transparent:hover {
+  background-color: #d00000;
   color: #fff;
 }
 .main-btn.red {
   background-color: #d00000;
   color: #fff;
   border-color: #d00000;
+}
+.main-btn.red:hover {
+  color: #d00000;
 }
 .main-btn.white {
   background-color: transparent;
@@ -1018,6 +1021,15 @@ html[lang=ar] .iti--separate-dial-code .iti__flag-container {
 .main-btn.white:hover {
   background-color: #fff;
   color: #3098de;
+}
+.main-btn.light {
+  background-color: #F0F0F0;
+  color: #505050;
+  border-color: #F0F0F0;
+}
+.main-btn.light:hover {
+  background-color: #505050;
+  color: #fff;
 }
 .main-btn.transparent {
   background-color: #fff;
@@ -1040,9 +1052,9 @@ html[lang=ar] .iti--separate-dial-code .iti__flag-container {
   color: #fff;
 }
 .main-btn.sm {
-  min-width: 80px;
-  font-size: 13px;
-  height: 34px;
+  min-width: 100px;
+  font-size: 14px;
+  height: 36px;
 }
 .main-btn.xs {
   width: 80px;
@@ -1157,7 +1169,7 @@ html[lang=ar] .iti--separate-dial-code .iti__flag-container {
 }
 
 /********************* Form *********************/
-.form-style {
+.form-section {
   border: 1px solid #dedede;
   padding: 30px;
   border-radius: 18px;
@@ -1165,13 +1177,37 @@ html[lang=ar] .iti--separate-dial-code .iti__flag-container {
   background-color: #fff;
 }
 @media screen and (max-width: 576px) {
-  .form-style {
+  .form-section {
     padding: 40px 20px;
   }
 }
 @media screen and (max-width: 425px) {
-  .form-style {
+  .form-section {
     padding: 30px 15px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .form-section .main-btn {
+    height: 42px;
+    font-size: 14px;
+  }
+}
+
+.form-style {
+  box-shadow: 0 0 15px 0 rgba(32, 32, 32, 0.1);
+  padding: 20px 30px;
+  border-radius: 15px;
+  width: 100%;
+  background-color: #fff;
+}
+@media screen and (max-width: 576px) {
+  .form-style {
+    padding: 20px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .form-style {
+    padding: 15px;
   }
 }
 @media screen and (max-width: 425px) {
@@ -1396,7 +1432,7 @@ html[lang=ar] .remove-append {
 }
 
 .main-border {
-  border: 1px solid #3098de;
+  border: 1px solid #dedede;
 }
 
 .main-border-b {
@@ -1417,6 +1453,15 @@ html[lang=ar] .remove-append {
     font-size: 14px;
     line-height: 1.7;
   }
+}
+
+.main-price {
+  color: #0c69ad;
+  font-size: 19px;
+  font-family: fontMed;
+}
+.main-price.sm {
+  font-size: 17px;
 }
 
 .main-padding {
@@ -1647,7 +1692,7 @@ html[lang=ar] .main-imgs .main-img:not(:last-child) {
 
 /********************* Inputs *********************/
 .input-g {
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   display: block;
 }
 
@@ -1682,11 +1727,12 @@ html[lang=ar] .main-imgs .main-img:not(:last-child) {
   min-height: 48px;
   border-radius: 10px;
   outline: none;
-  color: #505050;
+  color: #202020;
   transition: all 0.3s ease;
   border: 1px solid #dedede;
   font-size: 14px;
   padding: 13px 16px;
+  font-family: fontMed;
 }
 .main-input .input-me.photo-input {
   display: flex;
@@ -2269,6 +2315,39 @@ html[lang=ar] .user-img .user-camera {
   max-height: 16px;
 }
 
+.profile-img-con {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+@media screen and (max-width: 768px) {
+  .profile-img-con {
+    gap: 20px;
+    flex-wrap: wrap;
+  }
+}
+.profile-img-con .profile-img {
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+  object-fit: cover;
+}
+.profile-img-con .profile-input {
+  position: relative;
+}
+.profile-img-con .profile-input .profile-label {
+  width: 76px;
+  height: 76px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px dashed #0c69ad;
+  border-radius: 5px;
+}
+.profile-img-con .profile-input .profile-label .ic {
+  max-height: 26px;
+}
+
 .hidden-input {
   position: absolute;
   top: 0;
@@ -2540,7 +2619,7 @@ html[lang=ar] .modal-dialog .close-btn {
 .modal-dialog .modal-content {
   padding: 40px 0px 45px;
   align-items: center;
-  border-radius: 8px;
+  border-radius: 20px;
 }
 .modal-dialog .modal-content.print {
   padding: 30px 0px 30px;
@@ -2569,53 +2648,48 @@ html[lang=ar] .modal-dialog .close-btn {
 }
 .modal-dialog .modal-content .modal-header .modal-title {
   font-size: 17px;
-  font-family: fontDemi;
   color: #202020;
   margin-bottom: 0;
 }
-.modal-dialog .modal-content .modal-header .modal-img {
-  max-width: 90px;
-  max-height: 110px;
-  margin: auto;
-}
-.modal-dialog .modal-content .modal-header .modal-img.lg {
-  width: 190px;
-  height: 85px;
-}
-@media screen and (max-width: 576px) {
-  .modal-dialog .modal-content .modal-header .modal-img {
-    max-width: 65px;
-    max-height: 95px;
-  }
-}
 .modal-dialog .modal-content .modal-body {
   width: 100%;
-  padding: 0 80px;
+  padding: 0 20px;
 }
 .modal-dialog .modal-content .modal-body.center {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 28px;
+  gap: 20px;
 }
 @media screen and (max-width: 425px) {
   .modal-dialog .modal-content .modal-body {
-    padding: 0 20px;
+    padding: 0 5px;
   }
 }
 .modal-dialog .modal-content .modal-body .modal-title {
   font-size: 16px;
   color: #000;
   text-align: center;
-  font-family: fontDemi;
   margin-bottom: 18px;
+}
+.modal-dialog .modal-content .modal-body .modal-img {
+  max-width: 210px;
+  margin: auto;
+}
+.modal-dialog .modal-content .modal-body .modal-img.lg {
+  width: 190px;
+  height: 85px;
+}
+@media screen and (max-width: 576px) {
+  .modal-dialog .modal-content .modal-body .modal-img {
+    max-width: 160px;
+  }
 }
 .modal-dialog .modal-content .modal-body .modal-text {
   font-size: 15px;
-  color: #000;
+  color: #505050;
   text-align: center;
-  font-family: fontDemi;
   margin-bottom: 20px;
 }
 .modal-dialog .modal-content .modal-body .items {
@@ -2648,9 +2722,6 @@ html[lang=ar] .modal-dialog .close-btn {
   width: 100%;
   height: 100%;
 }
-.modal-dialog .modal-content .modal-body .items .modal-item .input-modal::placeholder {
-  font-family: fontReg;
-}
 .modal-dialog .modal-content .modal-body .modal-img-body {
   width: 180px;
   height: 160px;
@@ -2669,10 +2740,6 @@ html[lang=ar] .modal-dialog .close-btn {
 }
 .modal-dialog .modal-content .modal-footer * {
   margin: 0;
-}
-.modal-dialog .modal-content .modal-footer .main-btn {
-  margin: 0;
-  min-width: 190px;
 }
 .modal-dialog .modal-content .modal-footer .social-ic .ic {
   max-width: 45px;
@@ -2769,16 +2836,16 @@ html[lang=ar] .dropdown-menu.show {
   inset: 50px 0% auto auto !important;
 }
 html[lang=en] .dropdown-menu.left {
-  inset: 65px 0% auto auto;
+  inset: 60px 0% auto auto;
 }
 html[lang=ar] .dropdown-menu.left {
-  inset: 65px auto auto 0%;
+  inset: 60px auto auto 0%;
 }
 html[lang=en] .dropdown-menu.left.show {
-  inset: 65px 0% auto auto !important;
+  inset: 60px 0% auto auto !important;
 }
 html[lang=ar] .dropdown-menu.left.show {
-  inset: 65px auto auto 0% !important;
+  inset: 60px auto auto 0% !important;
 }
 .dropdown-menu.drop-lang {
   min-width: 150px;
@@ -3080,7 +3147,7 @@ html[lang=ar] .pagination .page-item:last-child .page-link {
 }
 
 .navbar-m {
-  padding: 26px 0;
+  padding: 15px 0;
   box-shadow: 0 0 15px 0 rgba(32, 32, 32, 0.1);
   position: sticky;
   top: 0;
@@ -3251,7 +3318,6 @@ html[lang=ar] .sidebar-m {
   transform: translateY(-50%);
   border-width: 12px;
   border-style: solid;
-  border-color: transparent transparent transparent #fff;
   z-index: 1;
   opacity: 0;
   transition: all 0.3s ease;
@@ -3261,6 +3327,12 @@ html[lang=en] .sidebar-m .links .link::after {
 }
 html[lang=ar] .sidebar-m .links .link::after {
   left: 0;
+}
+html[lang=en] .sidebar-m .links .link::after {
+  border-color: transparent #fff transparent transparent;
+}
+html[lang=ar] .sidebar-m .links .link::after {
+  border-color: transparent transparent transparent #fff;
 }
 .sidebar-m .links .link .side-icon {
   max-width: 17px;
@@ -3356,13 +3428,12 @@ html[lang=ar] .main-padding-right {
 .invoices-table thead th {
   padding: 20px 10px 15px;
   text-align: center;
-  font-size: 16px;
+  font-size: 15px;
   color: #505050;
   font-weight: 500;
 }
 @media screen and (max-width: 425px) {
   .invoices-table thead th {
-    font-size: 15px;
     padding: 15px 12px;
   }
 }
@@ -3373,7 +3444,7 @@ html[lang=ar] .main-padding-right {
   border: none;
 }
 .invoices-table tbody tr td {
-  font-size: 16px;
+  font-size: 15px;
   color: #505050;
   padding: 25px 10px;
   text-align: center;
@@ -3425,5 +3496,70 @@ html[lang=ar] .main-padding-right {
 }
 
 /**************** End Table *************/
+/**************** Start branches *************/
+.branche_img {
+  max-width: 300px;
+}
+@media screen and (max-width: 576px) {
+  .branche_img {
+    max-width: 250px;
+  }
+}
+
+.map {
+  width: 100%;
+  height: 400px;
+  border-radius: 8px;
+}
+@media screen and (max-width: 576px) {
+  .map {
+    height: 300px;
+  }
+}
+
+/**************** End branches *************/
+/**************** Start packages Section *************/
+.package-sec {
+  box-shadow: 0 0 15px 0 rgba(32, 32, 32, 0.1);
+  border-radius: 8px;
+  margin-bottom: 40px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+@media screen and (max-width: 576px) {
+  .package-sec {
+    flex-direction: column;
+  }
+}
+.package-sec .package_img {
+  width: 160px;
+  height: 160px;
+  flex-shrink: 0;
+}
+.package-sec .left {
+  width: 100%;
+}
+.package-sec .left .top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 15px;
+  flex-wrap: wrap;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #E0E0E0;
+}
+.package-sec .left .top .form-title {
+  margin-bottom: 12px;
+}
+.package-sec .left .bottom .package-item {
+  font-size: 15px;
+  color: #202020;
+  margin-bottom: 12px;
+}
+
+/**************** End packages Section *************/
 
 /*# sourceMappingURL=main.css.map */
