--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,11 +9,9 @@
   }
 }
 
-
-
 /**************** Start visits-cards *************/
 
-.visits-card{
+.visits-card {
   background-color: $white;
   box-shadow: $main-shadow;
   padding: 22px 20px;
@@ -23,23 +21,23 @@
   border-radius: 8px;
   transition: $main-transition;
 
-  .icon{
-      max-height: 50px;
+  .icon {
+    max-height: 50px;
   }
 
-  .num{
-      font-size: 20px;
-      color: $sec;
-      margin-bottom: 10px;
-      font-family: fontMed;
+  .num {
+    font-size: 20px;
+    color: $sec;
+    margin-bottom: 10px;
+    font-family: fontMed;
   }
 
-  .name{
-      color: $dark;
-      font-size: 16px;
+  .name {
+    color: $dark;
+    font-size: 16px;
   }
 
-  &:hover{
+  &:hover {
     box-shadow: $sec-shadow;
   }
 }
@@ -48,115 +46,170 @@
 
 /**************** Start Table *************/
 
-.invoices{
+.invoices {
   overflow-x: auto;
   box-shadow: $main-shadow;
   border-radius: 15px;
 
   &::-webkit-scrollbar {
     height: 4px;
-}
+  }
 }
 
-.invoices-table{
+.invoices-table {
   width: 100%;
   white-space: nowrap;
 
-  thead{
+  thead {
+    border-bottom: 1px solid $dark2;
+
+    th {
+      padding: 20px 10px 15px;
+      text-align: center;
+      font-size: 15px;
+      color: $dark;
+      font-weight: 500;
+
+      @media screen and (max-width: $screen-xs) {
+        padding: 15px 12px;
+      }
+    }
+  }
+
+  tbody {
+    tr {
       border-bottom: 1px solid $dark2;
-      
-      th{
-          padding: 20px 10px 15px;
-          text-align: center;
-          font-size: 16px;
-          color: $dark;
-          font-weight: 500;
-          
-          @media screen and (max-width: $screen-xs) {
-              font-size: 15px;
-              padding: 15px 12px;
-          }
+
+      &:last-child {
+        border: none;
       }
-  }
 
-  tbody{
+      td {
+        font-size: 15px;
+        color: $dark;
+        padding: 25px 10px;
+        text-align: center;
+        vertical-align: middle;
 
-      tr{
-          border-bottom: 1px solid $dark2;
+        @media screen and (max-width: $screen-xs) {
+          font-size: 14px;
+          padding: 15px 12px;
+        }
 
-          &:last-child{
-              border: none;
-          }
+        .info {
+          display: flex;
+          align-items: center;
+          gap: 12px;
+          font-family: fontMed;
 
-          td{
+          .left {
+            text-align: start;
+
+            .name {
               font-size: 16px;
-              color: $dark;
-              padding: 25px 10px;
-              text-align: center;
-              vertical-align: middle;
+              color: $black;
+              margin-bottom: 7px;
+            }
 
-              @media screen and (max-width: $screen-xs) {
-                  font-size: 14px;
-                  padding: 15px 12px;
-              }
-
-              .info{
-                  display: flex;
-                  align-items: center;
-                  gap: 12px;
-                  font-family: fontMed;
-
-                  .left{
-                      text-align: start;
-
-                      .name{
-                          font-size: 16px;
-                          color: $black;
-                          margin-bottom: 7px;
-                      }
-
-                      .text{
-                          font-size: 15px;
-                          color: $light;
-                      }
-                  }
-              }
-
-              .table-img{
-                  width: 60px;
-                  height: 60px;
-                  object-fit: cover;
-
-                  &.bg{
-                      width: 180px;
-                      height: 80px;
-                      object-fit: cover;
-                      border-radius: 8px;
-                  }
-              }
-
-              &.table-text{
-                  max-width: 250px;
-                  min-width: 250px;
-                  white-space: normal;
-                  line-height: 1.6;
-              }
-
-              button{
-                  background-color: transparent;
-              }
+            .text {
+              font-size: 15px;
+              color: $light;
+            }
           }
-      }
-  }
+        }
 
-  // &.light{
-  //     thead{
-          
-  //         th{
-  //             color: $light5;
-  //         }
-  //     }
-  // }
+        .table-img {
+          width: 60px;
+          height: 60px;
+          object-fit: cover;
+
+          &.bg {
+            width: 180px;
+            height: 80px;
+            object-fit: cover;
+            border-radius: 8px;
+          }
+        }
+
+        &.table-text {
+          max-width: 250px;
+          min-width: 250px;
+          white-space: normal;
+          line-height: 1.6;
+        }
+
+        button {
+          background-color: transparent;
+        }
+      }
+    }
+  }
 }
 
 /**************** End Table *************/
+
+/**************** Start branches *************/
+.branche_img {
+  max-width: 300px;
+
+  @media screen and (max-width: $screen-sm) {
+    max-width: 250px;
+  }
+}
+
+.map {
+  width: 100%;
+  height: 400px;
+  border-radius: 8px;
+
+  @media screen and (max-width: $screen-sm) {
+    height: 300px;
+  }
+}
+/**************** End branches *************/
+
+/**************** Start packages Section *************/
+.package-sec {
+  box-shadow: $main-shadow;
+  border-radius: 8px;
+  margin-bottom: 40px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+
+  @media screen and (max-width: $screen-sm) {
+    flex-direction: column;
+  }
+
+  .package_img {
+    width: 160px;
+    height: 160px;
+    flex-shrink: 0;
+  }
+
+  .left {
+    width: 100%;
+    .top {
+      @include between;
+      gap: 15px;
+      flex-wrap: wrap;
+      padding-bottom: 15px;
+      margin-bottom: 15px;
+      border-bottom: 1px solid $dark2;
+
+      .form-title {
+        margin-bottom: 12px;
+      }
+    }
+
+    .bottom {
+      .package-item {
+        font-size: 15px;
+        color: $black;
+        margin-bottom: 12px;
+      }
+    }
+  }
+}
+/**************** End packages Section *************/
