--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -91,6 +91,12 @@
         text-align: center;
         vertical-align: middle;
 
+        &.text_td {
+          // max-width: 200px;
+          min-width: 300px;
+          white-space: initial;
+        }
+
         @media screen and (max-width: $screen-xs) {
           font-size: 14px;
           padding: 15px 12px;
@@ -169,6 +175,7 @@
 /**************** End branches *************/
 
 /**************** Start packages Section *************/
+
 .package-sec {
   box-shadow: $main-shadow;
   border-radius: 8px;
@@ -212,4 +219,76 @@
     }
   }
 }
+
 /**************** End packages Section *************/
+
+/**************** Start add_sur_btns Section *************/
+.add_sur_btns{
+  .sur_btn{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    margin-bottom: 35px;
+    cursor: pointer;
+
+    &:last-child{
+      margin-bottom: 0;
+    }
+
+    .ic{
+      max-width: 22px;
+      max-height: 24px;
+    }
+
+    .text{
+      font-size: 16px;
+      color: $dark;
+    }
+  }
+}
+
+/**************** End add_sur_btns Section *************/
+
+/**************** Start Surveys Section *************/
+.input_btns{
+  display: flex;
+  gap: 10px;
+  
+  .main-input{
+    flex: 1;
+  }
+  
+  .main-btn, .select2-selection{
+    height: 40px;
+    min-height: 40px !important;
+    border-radius: 6px !important;
+    font-size: 14px;
+  }
+}
+
+.delete_radio, .edit_radio{
+  background-color: transparent;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 0;
+}
+
+.delete_radio{
+  color: $red;
+}
+
+.edit_radio{
+  color: $dark;
+}
+
+.upload_img{
+  max-height: 40px;
+  display: block;
+}
+
+.no_data{
+  max-width: 340px;
+  display: block;
+  margin: 0 auto;
+}
+/**************** End Surveys Section *************/
