--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -253,6 +253,10 @@
 .input_btns{
   display: flex;
   gap: 10px;
+
+  @media screen and (max-width:$screen-sm) {
+    flex-direction: column;
+  }
   
   .main-input{
     flex: 1;
@@ -290,5 +294,9 @@
   max-width: 340px;
   display: block;
   margin: 0 auto;
+
+  @media screen and (max-width:$screen-sm) {
+    max-width: 240px;
+  }
 }
 /**************** End Surveys Section *************/
