--- a/assets/css/sass/_components.scss
+++ b/assets/css/sass/_components.scss
@@ -2213,6 +2213,7 @@
 
         .ic{
           max-height: 36px;
+          max-width: 60px;
         }
       }
 
@@ -3012,28 +3013,21 @@
 
 // Pagination
 .pagination {
-  box-shadow: $main-shadow;
-  width: fit-content;
-  border-radius: 7px;
-  overflow: hidden;
-  margin: auto;
+  // box-shadow: $main-shadow;
+  // width: fit-content;
+  // border-radius: 7px;
+  // overflow: hidden;
+  // margin: auto;
+  justify-content: end;
 
   .page-item {
     .page-link {
       border: none;
-      color: $black2;
-      margin: 0 !important;
-      border-radius: 0 !important;
-      padding: 12px 18px;
-      font-size: 17px;
+      color: $black;
+      padding: 7px;
+      font-size: 16px;
       height: 100%;
-
-      #{$ltr} & {
-        border-right: 1px solid rgba($main, 0.7);
-      }
-      #{$rtl} & {
-        border-left: 1px solid rgba($main, 0.7);
-      }
+      font-family: fontMed;
 
       @media screen and (max-width: $screen-xxs) {
         padding: 8px 14px;
@@ -3063,20 +3057,11 @@
         }
       }
 
+      &:hover,
+      &:focus,
       &.active {
         color: $main;
-        background-color: $white;
-      }
-
-      &:hover,
-      &:focus {
-        background-color: $main;
-        color: $white;
-
-        .ic {
-          color: $white;
-          border-color: $white;
-        }
+        background-color: transparent;
       }
 
       &:focus {
@@ -3084,14 +3069,9 @@
       }
     }
 
-    &:last-child {
+    &:last-child, &:first-child {
       .page-link {
-        #{$ltr} & {
-          border-right: 0;
-        }
-        #{$rtl} & {
-          border-left: 0;
-        }
+        color: $main;
       }
     }
   }
