--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -299,4 +299,44 @@
     max-width: 240px;
   }
 }
+
+.appendedInput{
+  font-size: 16px;
+  color: $dark;
+  pointer-events: none;
+  transition: $main-transition;
+  width: calc(100% - 80px);
+  
+  @media screen and (max-width:$screen-xs) {
+    font-size: 15px !important;
+    width: calc(100% - 60px);
+  }
+
+  &.lg{
+    font-size: 18px;
+    font-family: fontMed;
+    color: $black;
+  }
+
+  &:focus{
+    padding: 10px 15px;
+    border: 1px solid $sec;
+    border-radius: 5px;
+    pointer-events: auto;
+    font-size: 14px;
+  }
+
+}
+
+.social-con{
+  @media screen and (max-width:$screen-sm) {
+    flex-direction: column;
+  }
+}
+.social_item{
+  .social_ic{
+    @include circle(30px);
+    object-fit: cover;
+  }
+}
 /**************** End Surveys Section *************/
